--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,6 @@
     = csrf_meta_tags
     = javascript_include_tag 'application'
     = stylesheet_link_tag 'application'
-
+    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0, maximum-scale=1.0"}
   %body
     = yield
